--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "blog",
+  "name": "zhenblog",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:TomatoDroid/blog.git",
   "author": "zhen <770226915@qq.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "serve": "vitepress serve docs",
+    "preview": "vitepress preview"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.29",
+    "vitepress": "1.0.0-rc.45",
     "vue": "^3.2.45"
   }
 }
