--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,6 @@
   },
   "references": [{ "path": "./tsconfig.node.json" }],
   "include": [
-    "./.vitepress/theme/*.ts",
-    "./.vitepress/theme/*.d.ts",
-    "./.vitepress/theme/*.tsx",
-    "./.vitepress/theme/*.vue",
-    "./.vitepress/config.ts"
+    ".vitepress/theme/**/*"
   ]
 }
